# base

./: .gitignore  README.md
api/: kpi.config.default.json  pyproject.toml  requirements.txt
api/core/: settings.py  urls.py
api/custom_type/: __init__.py
api/module/account/: urls.py
api/module/account/staff/: __init__.py  apps.py  models.py  urls.py
api/module/account/user/: models.py  urls.py
api/modules/account/: urls.py
api/modules/account/helpers/: group_sr.py  user_sr.py
api/modules/account/staff/: __init__.py  apps.py  consts.py  models.py  urls.py
api/modules/account/user/: admin.py  models.py
api/modules/configuration/: urls.py
api/modules/configuration/variable/: consts.py  models.py
api/modules/noti/: urls.py
api/modules/noti/verif/: models.py
api/service/: auth_service.py  date_service.py  email_service.py  format_service.py  request_service.py  string_service.py  token_service.py
api/service/framework/drf_class/: custom_pagination.py  custom_permission.py
api/service/framework/logger/: file_logger.py
api/service/framework/middleware/: strip_jwt.py
api/services/business/: quota_value_rule.py  survey_rule.py
api/services/business/quota/: assignment_result_rule.py  consts.py  quota_min_exp_rule.py  (+2 more)
api/services/context_processors/: template_global.py
api/services/drf_classes/: custom_pagination.py  custom_permission.py  jwt_auth.py
api/services/firebase/: firebase.py
api/services/helpers/: auth_utils.py  excel_utils.py  kpi_config.py  model_utils.py  res_utils.py  token_utils.py  utils.py
api/services/loggers/: file_logger.py  slack_logger.py
api/services/middleware/: cors.py  strip_jwt.py
api/services/models/: repo.py
api/services/sms/: speed_sms.py
api/services/tests/: test_utils.py
api/services/validators/: validator.py
api/templates/emails/: reset_all_password.html
api/urls/: v1.py
(+168 files in other folders)
