[tool.poetry]
name = "base"
version = "0.1.0"
description = "Python base project"
authors = ["Son Tran <son@zen8labs.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
argon2-cffi = "^23.1.0"
uvicorn = "^0.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
